[package]
name = "tools"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.12"
digest = "0.9"
grex = "1.1"
log = "0.4.11"
md-5 = "0.9.1"
num-bigint = "0.3"
sha-1 = "0.9.1"
sha2 = "0.9.1"
url = "2.1.1"
urlencoding = "1.1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3.44", features = ["HtmlAnchorElement", "HtmlTextAreaElement"] }
yew = "0.17.3"
yew-router = "0.14"
